[package]
name = "yabai-menu"
version = "0.1.0"
edition = "2021"
description = "Manage Yabai WM in your menubar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cacao = { version = "0.3.2" }
block2 = "0.3.0"
icrate = { version = "0.0.4", features = [
    "AppKit",
    "AppKit_NSWorkspace",
    "AppKit_NSEvent",
    "Foundation_NSNotificationCenter",
    "Foundation_NSNotification",
    "AppKit_NSMenu",
    "AppKit_NSMenuItem",
    "AppKit_NSStatusBar",
    "AppKit_NSStatusItem",
    "AppKit_NSStatusBarButton",
    "AppKit_NSImage",
] }
duct = "0.13.6"
serde_json = "1.0.108"
serde = "1.0.190"
once_cell = "1.18.0"

[package.metadata.bundle]
name = "YabaiMenu"
identifier = "fan.zeyi.yabai-menu"
version = "0.0.1"
copyright = "Copyright (c) Zeyi Fan 2023. All rights reserved."
short_description = "Manage Yabai WM in your menubar"
